duniverse/menhirLib.20200211/test/static/good/self.mly
%token A
%type<unit> s
%start<unit> dummy

%%

dummy: A {}

s: b s {}

b: {}

