duniverse/menhirLib.20200211/test/static/bad/no-tokens.mly
%type<unit> s
%start s

%%

s: s {}

